# mnemos

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HERMES_INSTALL.md  LICENSE  README.md  SETUP.md  continuity-framework.html  index.html  polyphonic-memory-system-spec.md  pyproject.toml
.github/workflows/: release-hardening.yml
benchmarks/: README.md  retrieval_benchmark.py
docs/: BUILD-SPEC.md  DEVELOPMENT.md  architecture.md  hermes-integration.md  identity-model.md  openclaw-integration.md  privacy-security.md  release-hardening.md  setup-video-script.md  shared-pool.md  turnkey-memory-system.md
docs/explainer/: hypomnema.html
docs/setup-video-frames/: 01-title.html  06-close.html  README.md
forge/: README.md  SKILL.md
forge/references/: agent-anatomy.md
forge/scripts/: forge-detect.sh  forge-pane.sh  forge.py
handoff/: SHARED-POOL-SPEC.md  current-relationships.py
mnemos/: __init__.py  affinity.py  bridge.py  cli.py  dream_journal.py  identity_diff.py  identity_svg.py  llm.py  mcp_server.py  openclaw_cron.py  simple_mcp.py  simple_runtime.py  simple_scope.py
mnemos/advanced/: __init__.py  attention_gate.py  dreaming.py  intention.py  intention_sweep.py  interference.py  interference_resolution.py  introspection.py  introspection_api.py  metamemory.py  metamemory_update.py  observer.py  predictive.py  schema.py  schema_maintenance.py  schema_matcher.py  spreading_activation.py  working_memory.py
mnemos/config/: __init__.py  defaults.py  loader.py
mnemos/consolidation/: __init__.py  belief_formation.py  belief_review.py  connection_discovery.py  daemon.py  decay.py  reflection.py  softening.py
mnemos/core/: __init__.py  belief.py  emotional_state.py  engram.py  identity.py  types.py
mnemos/encoding/: __init__.py  encoder.py  llm_classifier.py
mnemos/indexer/: __init__.py  claude_code_adapter.py  session_indexer.py
mnemos/integrations/: __init__.py
mnemos/interface/: __init__.py  context_packet.py  export.py  memory_inspector.py  openclaw_export.py  prompt_builder.py  session.py  visual_snapshot.py
mnemos/multiagent/: __init__.py  attestation.py  bridge.py  federation.py  relationships.py  shared_pool.py
mnemos/retrieval/: __init__.py  (+2 more)
scripts/: health_check.py
templates/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  active-context.md
tests/: conftest.py  test_affinity.py  test_affinity_followthrough.py  test_affinity_hint.py  test_agent_scoping.py  test_belief_formation.py  test_claude_cli_flag.py  test_cli_simple.py  test_context_packet.py  test_daemon_gate.py  test_dream_journal.py  test_encoding.py  test_env_isolation.py  test_extract_json.py  test_functional_memory.py  test_hermes_integration.py  test_hypomnema.py  test_identity_diff.py  test_indexer_config.py  test_indexer_discovery.py  test_integration.py  test_introspection.py  test_live_tick.py  test_local_provider.py  test_mcp_surface.py  test_migrations.py  test_no_silent_cloud_key.py  test_ollama_client.py  test_openrouter_reasoning.py  test_recent_engrams.py  test_reflection_window.py  test_retrieval.py  test_serve_mode.py  test_simple_runtime.py  test_softening_conservator.py  test_store.py  test_store_open_migrations.py
(+42 files in other folders)
