[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemos-memory"
version = "0.1.0"
description = "Local-first continuity memory for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Riley Ralmuto", email = "r.ralmuto@gmail.com" },
]
keywords = ["ai", "agents", "memory", "mcp", "continuity", "cognitive-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ulid-py>=1.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
embeddings = ["google-generativeai>=0.5.0"]
anthropic = ["anthropic>=0.25.0"]
all = [
    "mcp[cli]>=1.0.0",
    "google-generativeai>=0.5.0",
    "anthropic>=0.25.0",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
mnemos = "mnemos.cli:main"
mnemos-index-session = "mnemos.indexer.claude_code_adapter:main"

[project.urls]
Homepage = "https://github.com/Riley-Coyote/mnemos"
Repository = "https://github.com/Riley-Coyote/mnemos"
Issues = "https://github.com/Riley-Coyote/mnemos/issues"

[tool.hatch.build.targets.wheel]
packages = ["mnemos"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
